--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "scripts": {
+    "lint": "eslint",
     "test": "jest --coverage",
     "lint:css": "stylelint 'css/**/*.css'",
     "check-duplicates": "jscpd ./js --min-tokens 50 --reporters console,html --output ./reports"
