--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run lint
 
       - name: Run JSCPD
-        run: npm run check:duplicates
+        run: npm run check-duplicates
         
       - name: Jest unit testing
         run: npm run test
