--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        
+      - name: install eslint
+        run: npm install eslint --save-dev
 
       - name: Run ESLint
         run: npm run lint
