--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,6 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        
-      - name: install eslint
-        run: npm install eslint --save-dev
 
       - name: Run ESLint
         run: npm run lint
@@ -39,3 +36,9 @@ jobs:
         
       - name: Jest unit testing
         run: npm run test
+        
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./index.html 
