--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "lint": "eslint js",
     "test": "jest --coverage",
+    "test:detectOpenHandles": "jest --detectOpenHandles",
     "lint:css": "stylelint 'css/**/*.css'",
     "check-duplicates": "jscpd ./js --min-tokens 50 --reporters console,html --output ./reports"
   },
@@ -15,9 +16,11 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jscpd": "^4.0.5",
     "stylelint": "^16.9.0",
-    "stylelint-config-standard": "^36.0.1"
+    "stylelint-config-standard": "^36.0.1",
+    "supertest": "^7.0.0"
   },
   "name": "cs455_ass1",
   "version": "1.0.0",
@@ -37,6 +40,7 @@
     "babel-preset-current-node-syntax": "^1.1.0",
     "babel-preset-jest": "^29.6.3",
     "balanced-match": "^1.0.2",
+    "body-parser": "^1.20.3",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.3",
     "browserslist": "^4.23.3",
@@ -57,6 +61,7 @@
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
     "convert-source-map": "^2.0.0",
+    "cors": "^2.8.5",
     "create-jest": "^29.7.0",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.7",
@@ -82,6 +87,7 @@
     "execa": "^5.1.1",
     "exit": "^0.1.2",
     "expect": "^29.7.0",
+    "express": "^4.21.0",
     "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
     "fast-levenshtein": "^2.0.6",
@@ -218,6 +224,7 @@
     "source-map": "^0.6.1",
     "source-map-support": "^0.5.13",
     "sprintf-js": "^1.0.3",
+    "sqlite3": "^5.1.7",
     "stack-utils": "^2.0.6",
     "string-length": "^4.0.2",
     "string-width": "^4.2.3",
@@ -258,7 +265,8 @@
         "branches": 0,
         "functions": 0,
         "lines": 30,
-        "statements": 30
+        "statements": 30,
+        "timeout": 10000
       }
     }
   },
