--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ansi-styles": "^4.3.0",
     "anymatch": "^3.1.3",
     "argparse": "^2.0.1",
+    "axios": "^1.6.2",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-jest-hoist": "^29.6.3",
     "babel-preset-current-node-syntax": "^1.1.0",
