--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: '22.7.0'
 
       - name: Install dependencies
-        run: npm install
+        run: rm -rf node_modules; npm install
 
       - name: Run ESLint
         run: npm run lint
