--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: Install k6
-        run: snap install k6
+        run: sudo snap install k6
       - name: Run Server Load Test
         run: k6 run server_side_test.cjs
