--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -1,10 +1,10 @@
 name: Performance Tests
 
+
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  schedule:
+    - cron: '0 0 * * *'
+
 
 jobs:
   client_performance:
