--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -1,9 +1,10 @@
 name: Performance Tests
 
-
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 
 jobs:
