--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -1,11 +1,8 @@
 name: Performance Tests
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   client_performance:
